--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.20.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
     "vue-cookies": "^1.7.4",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
